Development/templates/ArtifactHubRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: artifacthub-ingress

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  parentRefs:
    - name: ingress-gw
  hostnames:
    - 'artifacthub.int.mylogin.space'
  rules:
    - backendRefs:
        - name: hub
          port: 80
