Development/templates/RegistryRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: registry-routes

  labels:
    wan-mode: 'public'

spec:
  parentRefs:
    - name: ingress-gw

  hostnames:
    - 'registry.writemy.codes'

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api

      - path:
          type: PathPrefix
          value: /service

      - path:
          type: PathPrefix
          value: /v2

      - path:
          type: PathPrefix
          value: /chartrepo

      - path:
          type: PathPrefix
          value: /c
      
      backendRefs:
        - name: k0s-cntrl-development-harbor-helm-core
          port: 80

    - backendRefs:
        - name: k0s-cntrl-development-harbor-helm-portal
          port: 80
