Development/templates/Route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gitlab-tls
spec:
  parentRefs:
    - name: ingress-gw
  hostnames:
    - '*.git.writemy.codes'
  rules:
    - backendRefs:
        - name: k0s-cntrl-development-webservice-default
          port: 8181
